--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,21 +1,21 @@
-name: Release Drafter
+# name: Release Drafter
 
-on:
-  push:
-    branches: ["main"]
+# on:
+#   push:
+#     branches: ["main"]
 
-jobs:
-  update_release_draft:
-    runs-on: ubuntu-latest
-    steps:
-      - id: version
-        run: |
-          version=$(date --utc '+%Y%m%d%H%M%S')
-          echo "::set-output name=version::$version"
+# jobs:
+#   update_release_draft:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - id: version
+#         run: |
+#           version=$(date --utc '+%Y%m%d%H%M%S')
+#           echo "::set-output name=version::$version"
 
-      - uses: release-drafter/release-drafter@v5
-        with:
-          tag: ${{ steps.version.outputs.version }}
-          name: ${{ steps.version.outputs.version }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       - uses: release-drafter/release-drafter@v5
+#         with:
+#           tag: ${{ steps.version.outputs.version }}
+#           name: ${{ steps.version.outputs.version }}
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
