--- a/package.json
+++ b/package.json
@@ -242,7 +242,7 @@
     "@polymer/polymer": "3.4.1",
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "lit": "^2.1.2",
-    "lit-html": "2.1.2",
+    "lit-html": "^2.6.1",
     "lit-element": "3.1.2",
     "@lit/reactive-element": "1.2.1"
   },
